feat : page system akun

--- a/pages/_system/akun/html/form.html
+++ b/pages/_system/akun/html/form.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %}
+{% extends "core/html/layouts/base.html" %}
 
 {% block title %} Form Users System {% endblock %}
 
@@ -8,8 +8,8 @@
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 
-{% include 'includes/_form_stylesheets.html' %}
-{% include 'includes/_all_stylesheets.html' %}
+{% include 'core/html/includes/_form_stylesheets.html' %}
+{% include 'core/html/includes/_all_stylesheets.html' %}
 
 {% endblock stylesheets %}
 
@@ -43,28 +43,28 @@
                         <!-- /.card-header -->
                         <div class="card-body">
                             <form id="form_">
-                                <input type="hidden" id="id" {% if user %} value="{{user.id}}" {% endif %}>
+                                <input type="hidden" id="id" {% if data_user %} value="{{data_user.id}}" {% endif %}>
                                 <div class="mb-3">
                                     <label for="full_name" class="form-label">Nama Lengkap</label>
-                                    <input type="text" class="form-control" name="full_name" placeholder="Nama Lengkap" {% if user %} value="{{user.full_name}}" {% endif %} required>
+                                    <input type="text" class="form-control" id="full_name" name="full_name" placeholder="Nama Lengkap" {% if data_user %} value="{{data_user.full_name}}" {% endif %} required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="username" class="form-label">User Akun</label>
-                                    <input type="text" class="form-control" name="username" placeholder="User" {% if user %} value="{{user.username}}" readonly {% endif %} required>
+                                    <input type="text" class="form-control" id="username" name="username" placeholder="User" {% if data_user %} value="{{data_user.username}}" {% endif %} required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="email" class="form-label">Email</label>
-                                    <input type="email" class="form-control" name="email" placeholder="email@contoh.com" {% if user %} value="{{user.email}}" readonly {% endif %} required>
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="email@contoh.com" {% if data_user %} value="{{data_user.email}}" {% endif %} required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="limit_expires" class="form-label">Limit Expired</label>
-                                    <input type="number" class="form-control" name="limit_expires" placeholder="30" {% if user %} value="{{user.limit_expires}}" {% endif %}>
+                                    <label for="nohp" class="form-label">No Handphone</label>
+                                    <input type="text" class="form-control" id="nohp" name="nohp" placeholder="6281000000" {% if data_user %} value="{{data_user.nohp}}" {% endif %} required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="active" class="form-label">Status Akun</label>
                                     <select class="form-select" aria-label="Default select" name="disabled">
-                                        <option value="1" {% if user %}{% if user.disabled %} selected {% endif %}{% endif %}>Tidak Aktif</option>
-                                        <option value="0" {% if user %}{% if not user.disabled %} selected {% endif %}{% endif %}>Aktif</option>
+                                        <option value="1" {% if data_user %}{% if data_user.disabled %} selected {% endif %}{% endif %}>Tidak Aktif</option>
+                                        <option value="0" {% if data_user %}{% if not data_user.disabled %} selected {% endif %}{% endif %}>Aktif</option>
                                     </select>
                                 </div>
                                 <div class="mb-3">
@@ -129,10 +129,10 @@
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
 
-{% include 'includes/_all_javascripts.html' %}
-{% include 'includes/_form_javascripts.html' %}
+{% include 'core/html/includes/_all_javascripts.html' %}
+{% include 'core/html/includes/_form_javascripts.html' %}
 <!-- ------------------- -->
-<script>const api = axios.create({ baseURL: '{{prefix_url}}/{{clientId}}/{{sessionId}}{% if user %}/{{user.id}}{% endif %}', timeout: 2000, headers: { 'Authorization': 'Bearer ' + Cookies.get('{{TOKEN_KEY}}') } });</script>
-<script src="{{prefix_url}}/{{clientId}}/{{sessionId}}/{{app_version}}/form.js"></script>
+<script>const api = axios.create({ baseURL: '{{prefix_url_post}}{% if data_user %}/{{data_user.id}}{% endif %}', timeout: 2000, headers: { 'Authorization': 'Bearer ' + Cookies.get('{{TOKEN_KEY}}') } });</script>
+<script src="{{prefix_url_js}}/form.js"></script>
 
 {% endblock javascripts %}
