--- a/pages/_auth/login/html/login.html
+++ b/pages/_auth/login/html/login.html
@@ -95,6 +95,6 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script> setTimeout(function () { window.location.href = "/auth/timeout/formlogin" }, 30 * 60 * 1000);</script>
-<script src="{{prefix_url_js}}/login.js?next={{nextpage}}"></script>
+<script src="{{prefix_url_js}}.js?next={{nextpage}}"></script>
 
 {% endblock javascripts %}
