--- a/core/pages/system/scope/html/form.html
+++ b/core/pages/system/scope/html/form.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %}
+{% extends "core/html/layouts/base.html" %}
 
 {% block title %} Form Scope System {% endblock %}
 
@@ -8,8 +8,8 @@
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 
-{% include 'includes/_form_stylesheets.html' %}
-{% include 'includes/_all_stylesheets.html' %}
+{% include 'core/html/includes/form/stylesheets.html' %}
+{% include 'core/html/includes/core/stylesheets.html' %}
 
 {% endblock stylesheets %}
 
@@ -43,14 +43,14 @@
                         <!-- /.card-header -->
                         <div class="card-body">
                             <form id="form_">
-                                <input type="hidden" id="id" {% if scope %} value="{{scope.id}}" {% endif %}>
+                                <input type="hidden" id="id" {% if data_scope %} value="{{data_scope.id}}" {% endif %}>
                                 <div class="mb-3">
                                     <label for="full_name" class="form-label">Scope</label>
-                                    <input type="text" class="form-control" name="scope" placeholder="Nama Scope" {% if scope %} value="{{scope.scope}}" readonly {% endif %} required>
+                                    <input type="text" class="form-control" name="scope" placeholder="Nama Scope" {% if data_scope %} value="{{data_scope.scope}}" {% endif %} required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="username" class="form-label">Deskripsi</label>
-                                    <input type="text" class="form-control" name="desc" placeholder="Deskripsi Skope" {% if scope %} value="{{scope.desc}}" {% endif %} required>
+                                    <input type="text" class="form-control" name="desc" placeholder="Deskripsi Skope" {% if data_scope %} value="{{data_scope.desc}}" {% endif %} required>
                                 </div>
                                 <div class="mb-3 mt-5 float-end">
                                     <button type="submit" class="btn btn-primary">SIMPAN</button>
@@ -76,10 +76,10 @@
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
 
-{% include 'includes/_all_javascripts.html' %}
-{% include 'includes/_form_javascripts.html' %}
+{% include 'core/html/includes/core/javascripts.html' %}
+{% include 'core/html/includes/form/javascripts.html' %}
 <!-- ------------------- -->
-<script>const api = axios.create({ baseURL: '{{prefix_url}}/{{clientId}}/{{sessionId}}{% if scope %}/{{scope.id}}{% endif %}', timeout: 2000, headers: { 'Authorization': 'Bearer ' + Cookies.get('{{TOKEN_KEY}}') } });</script>
-<script src="{{prefix_url}}/{{clientId}}/{{sessionId}}/{{app_version}}/form.js"></script>
+<script>const api = axios.create({ baseURL: '{{prefix_url_post}}{% if data_scope %}/{{data_scope.id}}{% endif %}', timeout: 2000, headers: { 'Authorization': 'Bearer ' + Cookies.get('{{TOKEN_KEY}}') } });</script>
+<script src="{{prefix_url_js}}/form.js"></script>
 
 {% endblock javascripts %}
