--- a/core/pages/system/menu/html/menu/index.html
+++ b/core/pages/system/menu/html/menu/index.html
@@ -158,6 +158,6 @@
 <!-- ------------------- -->
 </script>
 <script>const api = axios.create({ baseURL: '{{prefix_url_post}}/{{menutype_id}}', timeout: 2000, headers: { 'Authorization': 'Bearer ' + Cookies.get('{{TOKEN_KEY}}') } });</script>
-<script src="{{prefix_url_js}}/{{menutype_id}}/detail.js"></script>
+<script src="{{prefix_url_js}}/{{menutype_id}}/index.js"></script>
 
 {% endblock javascripts %}
