feat : page dashboard & documentation

--- a/pages/dashboard/html/index.html
+++ b/pages/dashboard/html/index.html
@@ -1,6 +1,6 @@
-{% extends "layouts/base.html" %}
+{% extends "core/html/layouts/base.html" %}
 
-{% block title %} Dashboard2 {% endblock %}
+{% block title %} Dashboard {% endblock %}
 
 <!-- Element injected in the BODY element -->
 {% block body_class %} sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed {% endblock body_class %}
@@ -8,7 +8,7 @@
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 
-{% include 'includes/_all_stylesheets.html' %}
+{% include 'core/html/includes/core/stylesheets.html' %}
 
 {% endblock stylesheets %}
 
@@ -21,7 +21,7 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1 class="m-0 text-dark">Dashboard v2</h1>
+          <h1 class="m-0 text-dark">Dashboard</h1>
         </div><!-- /.col -->
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
@@ -51,6 +51,6 @@
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
 
-{% include 'includes/_all_javascripts.html' %}
+{% include 'core/html/includes/core/javascripts.html' %}
 
 {% endblock javascripts %}
